2006-11-02	fabian

	* Eliminated the updateDisplay thread. Now all the UI stuff is in one thread, that should
	  help with the stability a lot.
	* Fixed the resizing bug when window is maximized and tab is hidden and a new tab is being opened.
	  
2006-11-01	fabian

	* Rewrite [VT100Screen _getLineAtIndex] for clarity.
	* Fixed background image problem when scrolling
	* Replace the termcap code with terminfo.
	* Changed the default profiles. Got rid of redundant keyboard settings.
	* Fixed a bug in [PTYSession brokenPipe] that has been producing crashes.
	* Fixed a bug in URL handlers where parameters are processed correctly.
	
2006-10-31	fabian

	* Added a few strings into iTerm.strings for localization purposes.
	* Fixed a bug in Profiles window's background image settings.
	* Added paste with escape
	* Added support to open all sessions in a bookmark folder.
	* Added a Reset operation in the menu (not fully working yet)
	
2006-10-30	fabian

	* A few tweaks to make panther version to have its own appcast and updates channel.
	
2006-10-29	fabian
	
	* Allowing users to specify parameters in bookmarks' command. For example, if the command is
	  ssh $$User Name$$@myserver.com, when you start this session, iTerm will ask you to enter
	  the "User Name", then plug your input into the command and run the session.
	* Release 0.9.2
	  
2006-10-26	fabian

	* Added a visual to indicate whether "send to all session" is turned on or not.
	* Improved About dialog.
	* Added Edit button for keymapping settings.
	* Changed cmd-click to open URL behavior: now http:// is no longer added unless the URL doesn't
	  explicitly have a scheme prefix.
	
2006-10-25	fabian

	* Added a semaphore in PTYSession's read thread to avoid the loss of data when the session ends.
	* Replaced two launch buttons in bookmarks window with a segmented control.
	* Cleaned some of the notification code. Now notifications will only be processed if it's from
	  the front session or window.
	* Icons updated.