@@ -20,7 +20,7 @@
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>Download:</STRONG></FONT><BR>
 <UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.9.2</A>: The latest iTerm release<IMG src="new.gif"><BR>
-<A HREF="http://iterm.sourceforge.net/iTerm-latest-cvs_0.9.2.1101.zip">Recent binary build from CVS</A> (0.9.2.1101, English only, <A HREF="http://iterm.sourceforge.net/Changelog.html">changelog</a>)<IMG src="new.gif"><BR>
+<A HREF="http://iterm.sourceforge.net/iTerm-latest-cvs_0.9.2.1103.zip">Recent binary build from CVS</A> (0.9.2.1103, English only, <A HREF="http://iterm.sourceforge.net/Changelog.html">changelog</a>)<IMG src="new.gif"><BR>
 This build is Tiger only. We will have pre-Tiger versions when we do a formal release.
 </UL>
 
